--- a/Project/my-react-app/package.json
+++ b/Project/my-react-app/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.78.0",
     "axios": "^1.12.2",
     "motion": "^12.23.12",
     "react": "^19.1.1",
